Using table-layout: fixed to prevent sidebar from collapsing
Fixes #45

--- a/_styles/api.less
+++ b/_styles/api.less
@@ -25,6 +25,7 @@
 }
 .container.api {
 	display: table;
+	table-layout: fixed;
   border-bottom: 1px solid #d5d5d5;
 	padding-top: 20px;
 }
